--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,5 +1,6 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?sjyyc#1" target="_blank">首页</a> | <a href="https://dnfbwsos78njn.cloudfront.net/1?ipozsaudm" target="_blank">动态网</a> | <a href="https://d2csrn8d5ncbve.cloudfront.net/2?ctuidh" target="_blank">大纪元</a> | <a href="https://doh73o6c3dnba.cloudfront.net/4?uwpmgyt" target="_blank">看中国</a> | <a href="https://d1or6b2roqil0x.cloudfront.net/pHh5q?wjugsxsx" target="_blank">新生网</a> | <a href="https://d12ogqhrsnt8ma.cloudfront.net/tktpt?aabskeivz" target="_blank">阿波罗网</a> | <a href="https://d1t2us6hq0fx1u.cloudfront.net/Mjpvu?eexedqado" target="_blank">干净世界</a> | <a href="https://d1205lb7lnyr8t.cloudfront.net/10?wnccs" target="_blank">退党服务</a> | <a href="https://d1z1i6xmekcnf1.cloudfront.net/Rffqf?tnloiui" target="_blank">明慧广播</a> | <a href="https://d1jex6syje0yji.cloudfront.net/nw9Vn?ohglayyfz" target="_blank">传奇时代</a> | <a href="https://djwddd4nnr0na.cloudfront.net/AF9AG?mpjstfu" target="_blank">新境界影视</a> | <a href="https://d2r9hn1obbkp2q.cloudfront.net/zqMQA?rqnzfjav" target="_blank">文昭谈论</a> | <a href="https://d3dnxm84b62m8k.cloudfront.net/7?kizjgjhmo" target="_blank">明慧</a></p><p><a href="https://djwddd4nnr0na.cloudfront.net/9?rjltyufzh" target="_blank">大法</a> | <a href="https://d1d4q9enzm2lz3.cloudfront.net/3?oflzewe" target="_blank">新唐人</a> | <a href="https://d3dnxm84b62m8k.cloudfront.net/obAhT?yemidbx" target="_blank">人民报</a> | <a href="https://d2vpfo96xp4pjo.cloudfront.net/xXNHu?krarqztuf" target="_blank">放光明</a> | <a href="https://d14a0yccee2yym.cloudfront.net/5?xvuzoxrwt" target="_blank">新纪元</a> | <a href="https://d22qnxkzs9qeoh.cloudfront.net/6?wauovclew" target="_blank">希望之声</a> | <a href="https://d37g5boc7rm625.cloudfront.net/11?yinaj" target="_blank">无界网络</a> | <a href="https://dd92z3w2j4w9k.cloudfront.net/Pueji?klfbq" target="_blank">追查国际</a> | <a href="https://d3myewunzonann.cloudfront.net/16?opcwq" target="_blank">明慧之窗</a> | <a href="https://d1q5zi9q4mpi9f.cloudfront.net/LdvzZ?yashatkq" target="_blank">细语人生</a> | <a href="https://d3bo5docy69ast.cloudfront.net/fBn3r?gwprb" target="_blank">新世纪影视</a> | <a href="https://d2rq98et8nmaey.cloudfront.net/PUWMb?xrvakgd" target="_blank">江峰时刻</a> | <a href="https://d1205lb7lnyr8t.cloudfront.net/8?iewmablq" target="_blank">正见</a></p></td></tr>
-<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689308.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2025/09/id14603134-GettyImages-2170355153-320x200.jpg"><p align="center">日本从六千米深海试掘 成功采集大量稀土泥</p></a>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?neireeg#1" target="_blank">首页</a> | <a href="https://d2frcdcjb0c6wq.cloudfront.net/1?aydztjx" target="_blank">动态网</a> | <a href="https://d19vw3711v9lks.cloudfront.net/2?hecqiktpo" target="_blank">大纪元</a> | <a href="https://doyvntponycdh.cloudfront.net/4?kmkjgtzz" target="_blank">看中国</a> | <a href="https://d3dnxm84b62m8k.cloudfront.net/pHh5q?xeicb" target="_blank">新生网</a> | <a href="https://d2h2x8lw1kpl69.cloudfront.net/tktpt?vgxyylijv" target="_blank">阿波罗网</a> | <a href="https://di88ceki78g29.cloudfront.net/Mjpvu?zvkyda" target="_blank">干净世界</a> | <a href="https://d2rq98et8nmaey.cloudfront.net/10?lmslw" target="_blank">退党服务</a> | <a href="https://d2cj9ah31kn8fl.cloudfront.net/Rffqf?gtklxd" target="_blank">明慧广播</a> | <a href="https://doyvntponycdh.cloudfront.net/nw9Vn?uxghhidp" target="_blank">传奇时代</a> | <a href="https://d2gp1icp8dv5pn.cloudfront.net/AF9AG?vqinxu" target="_blank">新境界影视</a> | <a href="https://d19vw3711v9lks.cloudfront.net/zqMQA?kgtkr" target="_blank">文昭谈论</a> | <a href="https://dlph7fabhsbfp.cloudfront.net/7?exwxbaig" target="_blank">明慧</a></p><p><a href="https://d3myewunzonann.cloudfront.net/9?fcfwitd" target="_blank">大法</a> | <a href="https://dhltq9qxjnmw2.cloudfront.net/3?dzygqln" target="_blank">新唐人</a> | <a href="https://dl1ez95kskssm.cloudfront.net/obAhT?ubwfft" target="_blank">人民报</a> | <a href="https://d3myewunzonann.cloudfront.net/xXNHu?ogjia" target="_blank">放光明</a> | <a href="https://d1f01xri6nyv0g.cloudfront.net/5?jppfdh" target="_blank">新纪元</a> | <a href="https://d2rum6kyy1zd7y.cloudfront.net/6?mlmwql" target="_blank">希望之声</a> | <a href="https://d3asbsenpgs1fq.cloudfront.net/11?srwyuze" target="_blank">无界网络</a> | <a href="https://d2aqxvnyguf0uq.cloudfront.net/Pueji?wsqtiqxn" target="_blank">追查国际</a> | <a href="https://d3b82atanl11dg.cloudfront.net/16?zkstp" target="_blank">明慧之窗</a> | <a href="https://d17bhfsmf5ovpz.cloudfront.net/LdvzZ?tizsmkmc" target="_blank">细语人生</a> | <a href="https://dlvlk7o3qgp9v.cloudfront.net/fBn3r?ritytar" target="_blank">新世纪影视</a> | <a href="https://dp0r2i3ixve2v.cloudfront.net/PUWMb?dyuscqpg" target="_blank">江峰时刻</a> | <a href="https://d2agd1dsojkgmu.cloudfront.net/8?qdvqozon" target="_blank">正见</a></p></td></tr>
+<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689305.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2026/02/id14689379-GettyImages-2258960294-320x200.jpg"><p align="center">哥斯达黎加大选 保守派费尔南德斯获胜</p></a>
+<a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689305.md#1" title="哥斯达黎加大选 保守派费尔南德斯获胜""><img width="73" src="https://i.epochtimes.com/assets/uploads/2026/02/id14689379-GettyImages-2258960294-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689308.md#1" title="日本从六千米深海试掘 成功采集大量稀土泥""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/09/id14603134-GettyImages-2170355153-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689241.md#1" title="观众无畏风雪观神韵 亚特兰大演出落幕""><img width="73" src="https://i.epochtimes.com/assets/uploads/2026/02/id14689243-2602012057301154-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689242.md#1" title="强风暴袭美东 北卡交通瘫痪 佛州罕飘雪""><img width="73" src="https://i.epochtimes.com/assets/uploads/2026/02/id14689263-GettyImages-2258844038-320x200.jpg">&nbsp;</a>
@@ -11,17 +12,16 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14689005.md#1" title="【专访】制片人谈《梅拉尼娅》拍摄内幕""><img width="73" src="https://i.epochtimes.com/assets/uploads/2026/02/id14689016-GettyImages-2258947147-LS-1080x720-1-320x200.webp">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688959.md#1" title="中共二十大后18名上将被查20上将“失踪”""><img width="73" src="https://i.epochtimes.com/assets/uploads/2026/01/id14687458-GettyImages-2202765589-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688889.md#1" title="德州选举 民主党人成功翻盘获州参议员席位""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/07/id13103659-Canon-EOS-70D-3648x2432_000072-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/1992513/djy/blob/master/gb/26/1/22/n14681521.md#1" title="进化骗局(7) 北京“猿人”的高超骗术""><img width="73" src="https://i.epochtimes.com/assets/uploads/2026/01/id14681539-jinhuapianju07-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689386.md#1">A股市场遭遇全面重挫 逾4600只个股下跌</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689337.md#1">想与企鹅一起生活吗？ 英国南极调查局征才</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689387.md#1">北京长峰医院致命火灾 19人获刑被指“背锅”</a><br>
+:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689386.md#1">A股市场遭遇全面重挫 逾4600只个股下跌</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689337.md#1">想与企鹅一起生活吗？ 英国南极调查局征才</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689387.md#1">北京长峰医院致命火灾 19人获刑被指“背锅”</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689377.md#1">受贿上亿 中共前司法部部长唐一军被判无期</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689151.md#1">【翻墙必看】军队武官文官皆不配合习指示</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689305.md#1">哥斯达黎加大选 保守派费尔南德斯获胜</a><br>
 :clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689308.md#1">日本从六千米深海试掘 成功采集大量稀土泥</a><br>
 :clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689230.md#1">中国留学生在意大利山区失联15天 引关注</a><br>
-:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689242.md#1">强风暴袭美东 北卡交通瘫痪 佛州罕飘雪</a><br>
+:clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689242.md#1">强风暴袭美东 北卡交通瘫痪 佛州罕飘雪</a><br>
 :clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689262.md#1">知名女歌手于文文贵州演唱会上晕倒送医</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687999.md#1">军方缺席中共政治局会议 专家析内讧后遗症</a><br>
@@ -108,8 +108,8 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/24/n14683154.md#1">北京政变传闻再起 “局势随时突变”</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/24/n14683035.md#1">实战派张又侠刘振立落马 分析：重创中共军力</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/24/n14682758.md#1">柳岩主演《金刚不坏》 上映48天票房仅70万</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d1alscffm4k0ci.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d1alscffm4k0ci.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d1alscffm4k0ci.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d1alscffm4k0ci.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d1alscffm4k0ci.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d1alscffm4k0ci.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d1alscffm4k0ci.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d1alscffm4k0ci.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d1alscffm4k0ci.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d1alscffm4k0ci.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d1alscffm4k0ci.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d1alscffm4k0ci.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d1alscffm4k0ci.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d1alscffm4k0ci.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d1alscffm4k0ci.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d1alscffm4k0ci.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d1alscffm4k0ci.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d1alscffm4k0ci.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d1alscffm4k0ci.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d1alscffm4k0ci.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d1alscffm4k0ci.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d1alscffm4k0ci.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d1alscffm4k0ci.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d1alscffm4k0ci.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d1alscffm4k0ci.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d1alscffm4k0ci.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 42,521</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d1stcjfs1mg0ck.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d1stcjfs1mg0ck.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d1stcjfs1mg0ck.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d1stcjfs1mg0ck.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d1stcjfs1mg0ck.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d1stcjfs1mg0ck.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d1stcjfs1mg0ck.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d1stcjfs1mg0ck.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d1stcjfs1mg0ck.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d1stcjfs1mg0ck.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d1stcjfs1mg0ck.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d1stcjfs1mg0ck.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d1stcjfs1mg0ck.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d1stcjfs1mg0ck.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d1stcjfs1mg0ck.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d1stcjfs1mg0ck.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d1stcjfs1mg0ck.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d1stcjfs1mg0ck.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d1stcjfs1mg0ck.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d1stcjfs1mg0ck.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d1stcjfs1mg0ck.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d1stcjfs1mg0ck.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d1stcjfs1mg0ck.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d1stcjfs1mg0ck.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d1stcjfs1mg0ck.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d1stcjfs1mg0ck.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 42,521</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
@@ -123,12 +123,12 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/25/3/25/n14466392.md#1">【内幕】中国大基建如何成为贪腐提款机</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/3/20/n14462776.md#1">【内幕】李嘉诚卖巴拿马港口涉中共高层政争</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/3/7/n14453270.md#1">【独家】防火墙下的博弈 中国多少人在翻墙</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646583.md#1">“退让”是软弱吗？炫耀者为何感到羞愧？</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/12/11/n14653064.md#1">【未解之谜】森林小仙女预言地球未来</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/12/11/n14653060.md#1">2025年新唐人全世界人物写实油画大赛入围作品赏析——《寡妇的两文钱》</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651758.md#1">圣墓之旅：耶路撒冷圣地珍宝闪亮纽约</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/5/10/n14504111.md#1">唐代文明史?美术</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643889.md#1">婚姻幸福之道：阴阳平衡 琴瑟和鸣</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645020.md#1">春秋五霸楚庄王为何能一鸣惊人一飞冲天？</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/5/3/n14497653.md#1">【品读唐诗】千古绝唱 元稹悼亡诗</a><br>
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/18/1/31/n10101444.md#1">腊月十六为何盛大作尾牙 祭土地公迎财还迎接什么？</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/10/3/27/n2858574.md#1">16世纪意大利矫饰主义风格画家——帕米贾尼诺（上）</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14686851.md#1">立春节气要“养生”做这些事增长一年阳气</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14686592.md#1">人物写实油画大赛入围作品欣赏——《深渊边缘》</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/26/1/24/n14682971.md#1">跟我学唐诗（45A）</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/26/1/4/n14668717.md#1">德行才是行走于人间的通行证</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/26/1/20/n14680146.md#1">【古道人生】差役妻代替素昧平生的犯人妻流放 千古一例</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/15/6/23/n4464215.md#1">闻道长安似弈棋——读《虬髯客传》之虬髯客(下)</a><br>
 <br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="371"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/1992513/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
